<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:text="@string/title_text"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/title_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="image of gym"
        app:srcCompat="@drawable/weight_room" />

    <Button
        android:id="@+id/access_activity_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/access_activity_btn_lbl"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/create_new_member_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/create_new_member_btn_lbl"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reserve_a_schedule_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/reserve_a_schedule_btn_lbl"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>